force-app/main/default/objects/employee__c/employee__c.object-meta.xml
<CustomObject>
    <label>employee</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>