force-app/main/default/objects/employee__c/fields/deptno__c.field-meta.xml
<CustomField>
    <fullName>deptno__c</fullName>
    <label>deptno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>