force-app/main/default/objects/employee__c/fields/ename__c.field-meta.xml
<CustomField>
    <fullName>ename__c</fullName>
    <label>ename</label>
    <length>20</length>
    <type>Text</type>
</CustomField>