force-app/main/default/objects/employee__c/fields/job__c.field-meta.xml
<CustomField>
    <fullName>job__c</fullName>
    <label>job</label>
    <length>20</length>
    <type>Text</type>
</CustomField>